@@ -7,15 +7,16 @@ AC_CANONICAL_HOST
 AC_PROG_CC
 AC_PROG_INSTALL
 
-dnl Checks for libraries.
-dnl Replace `main' with a function in -lr:
-dnl AC_CHECK_LIB(r, main)
-
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h limits.h malloc.h stdlib.h strings.h sys/stat.h \
     sys/time.h sys/types.h unistd.h)
+
+dnl Check for zlib.  Make sure it comes with zlib.h.
+LIBS=""
+AC_CHECK_LIB(z, deflate,
+    AC_CHECK_HEADER(zlib.h, AC_DEFINE(HAVE_LIBZ) LIBS="$LIBS -lz"))
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -80,7 +81,7 @@ AC_SUBST(BUILD_FLAGS)
 DMALLOC=
 AC_ARG_ENABLE(dmalloc, [  --enable-dmalloc: do dmalloc stuff], \
     [ echo "--- enabling dmalloc";
-    DMALLOC="-L/usr/local/lib -ldmalloc"; AC_DEFINE(USE_DMALLOC) ])
+    LIBS="$LIBS -L/usr/local/lib -ldmalloc"; AC_DEFINE(USE_DMALLOC) ])
 AC_SUBST(DMALLOC)
 
 AC_OUTPUT(Makefile)
